<resources>
    <string name="app_name">Explore</string>
    <string name="not_a_account_need_to_register"><u>Not a Account! Need To Register?</u></string>
    <string name="already_have_an_account_need_to_login"><u>Already have an account! Need to Login?</u></string>
    <string name="_10_top_rated_tourist_attractions_in_montreal">10 Top-Rated Tourist Attractions in Montreal</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">LOGIN</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="register">REGISTER</string>
    <string name="view">View</string>
    <string name="view_on_map">View on Map</string>
    <string name="logout">Logout</string>
    <string name="please_enter_name">Please Enter Name</string>
    <string name="please_enter_email">Please Enter Email</string>
    <string name="please_enter_password">Please Enter Password</string>
    <string name="please_enter_confirm_pass">Please Enter Confirm Password</string>
    <string name="enter_same_pass">Please Enter Same Password</string>
    <string name="mont_royal">Mont Royal</string>
    <string name="mont_royal_des">Mont-Royal rises 233 meters above the city and is the green lung near the city center. A stroll through this lovely park enables the visitor to see monuments to Jacques Cartier and King George VI, to spend some time by Lac-aux-Castors, and to have a look at the cemeteries on the western slope where the city\'s different ethnic groups have rested in peace together for centuries.</string>
    <string name="vieux_montreal">Vieux Montreal</string>
    <string name="vieux_montreal_des">Old Montréal is a remarkable concentration of buildings dating from the 17th, 18th, and 19th centuries. The district has the delightful feel of a Parisian-style quarter, situated as it is between the waterfront and the business hub. Its many historic sites, streets, and landmarks are best explored on foot.</string>
    <string name="mary_queen">Mary Queen</string>
    <string name="mary_queen_des">\"The Catholic Mary Queen of the World Cathedral, east of Place du Canada, was built in 1894 as a smaller version of St. Peter\'s in Rome. The massive statues represent the patron saints of the 13 parishes of Montreal in the 19th century and were all sculpted by Olindo Gratton between 1892 and 1898. \"</string>
    <string name="mcCord_museum">McCord Museum</string>
    <string name="mcCord_museum_des">\"The McCord Museum has an outstanding collection of exhibits on Canada\'s social history, especially native peoples. Its collections of costumes, clothing, accessories, quilts, and other hand-made textiles total more than 20,000 objects and include works by Montreal fashion designers. \"</string>
    <string name="lachine_canal">Lachine Canal</string>
    <string name="lachine_canal_des">Lachine, on the southeast bank of Montréal Island (in Lac St.-Louis), got its name from the first pioneers who, in the 17th century, made their way up the St. Lawrence looking for a route to China (in French, \"la Chine\"). The 14.4-kilometer Lachine Canal, a way of getting around the Lachine Rapids, was dug in 1825.</string>
    <string name="place_des_arts">Place des Arts</string>
    <string name="place_des_arts_des">\"The Place des Arts is an entire complex dedicated to visual and performing arts, the largest of its kind in all Canada. Three great cultural organizations make their home here: the Montreal Symphony Orchestra, Les Grands Ballets Canadiens, and the Opéra de Montréal, and its various stages and rehearsal halls provide venues for all kinds of theater, music, dance, films, and events. \"</string>
    <string name="pointe_a_calliere">Pointe-à-Callière</string>
    <string name="pointe_a_calliere_des">At one corner of Place Royale in Vieux-Montréal is the Pointe-à-Callière, now marked by a striking modern building housing a museum of archaeology and history. Place Royale was the center of life in Montréal\'s early and colonial days, where the market and parade ground were located until later government buildings displaced them.</string>
    <string name="parc_jean_drapeau">Parc Jean Drapeau</string>
    <string name="parc_jean_drapeau_des">Île Sainte-Hélène (named after the wife of Samuel de Champlain) and the artificial island of Notre-Dame were the site of Expo \'67. They are now known as Parc Jean Drapeau and have many family-minded attractions. A remnant of the 1967 world fair, the Biosphere is now a museum dedicated to ecological issues.</string>
    <string name="notre_dame_basilica">Notre-Dame Basilica</string>
    <string name="notre_dame_basilica_des">Founded in 1656, Montréal\'s oldest church, Notre-Dame Basilica, stands in a far grander incarnation than the original. The twin towers of the neo-Gothic façade face Place d\'Armes. The intricate and resplendent interior was designed by Victor Bourgeau.</string>
    <string name="jardin_bonatique">Jardin Botanique</string>
    <string name="jardin_bonatique_des">High above the city in the grounds that hosted the 1976 Summer Olympic Games, Parc Maisonneuve (Pie IX Metro) is the site of Montreal\'s wonderfully imaginative botanical garden. The diverse plants are grown in 30 themed gardens and 10 exhibition greenhouses, so a wide range of climates are represented.</string>
    <string name="logout_alert">Logout!</string>
    <string name="alert_logout_msg">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
</resources>